--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,8 +1,6 @@
-
-  .about-image:before,
-  .about-image:after
-  {
-    content:"";
+.about-image:before,
+.about-image:after {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -11,13 +9,25 @@
     border-radius: 4px;
     background: #fff;
     transition: 0.5s;
-    z-index:-1;
-  }
-  .about-image:hover:before{
-  transform: rotate(10deg);
-  box-shadow: 0 2px 20px rgba(0,0,0,.2);
-  }
-  .about-image:hover:after{
-  transform: rotate(5deg);
-  box-shadow: 0 2px 20px rgba(0,0,0,.2);
-  }
+    z-index: -1;
+}
+
+.about-image:before {
+    transform: rotate(7deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, .2);
+}
+
+.about-image:after {
+    transform: rotate(3deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, .2);
+}
+
+.about-image:hover:before {
+    transform: rotate(10deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, .2);
+}
+
+.about-image:hover:after {
+    transform: rotate(6deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, .2);
+}
