--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
     scroll-behavior: smooth;
 }
 
-html {
+/* html {
     font-family: 'Poppins', sans-serif;
-}
+} */
 
 body.active-modal {
     overflow-y: hidden;
@@ -19,7 +19,7 @@ body.active-modal {
 }
 
 h1, nav, .hero-text{
-    font-family: 'Signika Negative';
+    font-family: 'Lilita One';
 }
 
 h1 {
@@ -107,4 +107,25 @@ p{
 }
 .noSelect:focus {
     outline: none !important;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+ 
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
