--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,13 @@ p{
     font-family: 'Signika Negative';
 }
 
+section{
+    max-width: 1920px;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /* about top */
 .custom-shape-divider-top-1700918840 {
     position: absolute;
@@ -111,7 +118,7 @@ p{
 
 /* width */
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 14px;
 }
  
 /* Track */
@@ -122,7 +129,6 @@ p{
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background: #888;
-    border-radius: 5px;
 }
  
 /* Handle on hover */
